tests/errors/first_stage/operation/operand_number/operand_number.as
; operand is an immediate number that doesn't follow a '#'
mov 2, r1